Thu Sep 07 20:50:49 2000  George Lebl <jirka@5z.com>

	* gtk/gtkmenu.c:  Backported Nils Barth's patch for submenu
	  navigation with Owen's fixes and suggestions.  The original
	  ChangeLog from Owen for HEAD goes as folllows:  Apply patch from
          Nils Barth and David Santiago to improve submenu
          navigation. The patch does this by creating a triangular
          region from the point where the pointer leaves the
          menu to the submenu.  While the pointer is in
          that region and a timeout has not expired, events
          that would cause the active submenu to change are
          ignored.

Sun Sep 03 00:47:08 2000  George Lebl <jirka@5z.com>

	* gtk/gtkwidget.h:  Add some documenting comments about 
	  GTK_CAN_DEFAULT, GTK_HAS_DEFAULT and GTK_RECEIVES_DEFAULT
	  just as owen said on irc.

	* gtk/gtkwindow.c (gtk_window_set_default):  Don't blindly
	  set HAS_DEFAULT.  Only set it if there isn't another window
	  holding it (a focus window which RECEIVES_DEFAULT) and only unset
	  it if the widget is not the focused window with RECEIVES_DEFAULT.
	  This fixes weird double default bugs in dialogs which has things
	  call gtk_window_set_default at times.

Fri Aug 18 17:27:46 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (gtk_clist_merge): Don't leave dangling
	->prev fields when merging lists. (Found simultaneously
	by Pawel Salek and Jakub Jelinek)

Sun Jul 30 14:17:43 2000  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in,po/{sp,sr}.po: Added Serbian files

Thu Jul 27 05:06:29 2000  Tim Janik  <timj@gtk.org>

	* gtk/gtktable.c: applied patch from Phil Thompson
	<phil@river-bank.demon.co.uk> that enables space settings for
	the last row/columns as well.

2000-07-19  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gdk/gdk.h, gtk/gtktypeutils.h: Include gdk/gdkrgb.h and
	gtk/gtktypebuiltins.h resp. outside of the extern "C" block. Makes
	some C++ compiler happy. Reported by Denis Vakatov
	<vakatov@peony.nlm.nih.gov>.
